tests/--check/it_should_fail_on_invalid_config.toml.stderr
Error: TOML parse error at line 2, column 7
  |
2 | cmd = "npm install"
  |       ^^^^^^^^^^^^^
invalid type: string "npm install", expected a sequence

